--- a/political-scorecard-backend/mariadb/docker-compose.yml
+++ b/political-scorecard-backend/mariadb/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3.8'
 
+# Note : This mariadb relies on init.sql to create the initial access for the server.
+# The server then uses that access to create the databases and tables.
+# In a production environment, you would want to then implement a secondary server-access permission
+# to prevent unauthorized actions being taken on the database in the case that is compromised.
+
 services:
   mariadb:
     image: mariadb:latest
